# bitmask

./: .gitignore  LICENSE  README.md  bitmask.py  pyproject.toml  test_bitmask.py
bitmask/: __about__.py  __init__.py  bitmask.py  test_bitmask.py  util.py
tests/: test_bitmask.py
