[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitmask"
description = 'Featureful bitmask implementation.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "dogeystamp", email = "dogeystamp@disroot.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/dogeystamp/bitmask#readme"
Issues = "https://github.com/dogeystamp/bitmask/issues"
Source = "https://github.com/dogeystamp/bitmask"

[tool.hatch.version]
path = "bitmask/__about__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "flake8",
  "black",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=bitmask --cov=tests"
no-cov = "cov --no-cov"
style = [
	"flake8 {args:.}",
	"black --check --diff {args:.}",
]
fmt = [
	"black {args:.}",
]

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "bitmask/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
